src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Einstein_Account_Insights__c</fullName>
        <inlineHelpText>Choose the insight you&apos;d like to display for this account</inlineHelpText>
        <label>Einstein - Account Insights</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merger &amp; Acquisition</fullName>
                </value>
                <value>
                    <fullName>Company Expanding</fullName>
                </value>
                <value>
                    <fullName>Company Cost Cutting</fullName>
                </value>
                <value>
                    <fullName>Leadership Change</fullName>
                </value>
                <value>
                    <fullName>Prospect unresponsive</fullName>
                </value>
                <value>
                    <fullName>No communication</fullName>
                    <default>true</default>
                    <label>No communication</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Einstein_Article_1_Date__c</fullName>
        <inlineHelpText>Enter the date for the first article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_1_Source__c</fullName>
        <inlineHelpText>Enter the source for the first article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 1 Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_1_Title__c</fullName>
        <inlineHelpText>Enter the title for the first article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 1 Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_1_URL__c</fullName>
        <inlineHelpText>Enter the URL for the first article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 1 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_2_Date__c</fullName>
        <inlineHelpText>Enter the date for the second article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_2_Source__c</fullName>
        <inlineHelpText>Enter the source for the second article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 2 Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_2_Title__c</fullName>
        <inlineHelpText>Enter the title for the second article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 2 Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_2_URL__c</fullName>
        <inlineHelpText>Enter the URL for the second article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 2 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_3_Date__c</fullName>
        <inlineHelpText>Enter the date for the third article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_3_Source__c</fullName>
        <inlineHelpText>Enter the source for the third article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 3 Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_3_Title__c</fullName>
        <inlineHelpText>Enter the title for the third article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 3 Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Article_3_URL__c</fullName>
        <inlineHelpText>Enter the URL for the third article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 3 URL</label>
        <type>Url</type>
    </fields>
</CustomObject>